[package]
name = "tx-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.24", features = ["full"] }
tx-common = { path = "../tx-common" }
env_logger = "0.10.0"
tokio-retry = "0.3.0"
futures = "0.3.12"
rand = "0.8.5"
log = "0.4.17"