[package]
name = "tx-server"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.24", features = ["rt-multi-thread", "net", "macros"] }
serde = { version = "1", features = ["derive"] }
tx-common = { path = "../tx-common" }
env_logger = "0.10.0"
tokio-retry = "0.3.0"
test-log = "0.2.11"
futures = "0.3.12"
log = "0.4.17"
